--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
       "files": ["*.ts"],
       "parserOptions": {
         "project": ["tsconfig.json"],
-        "createDefaultProgram": true
+        "createDefaultProgram": true,
+        "ecmaVersion": 2021,
+        "sourceType": "module"
       },
       "extends": [
         "plugin:@angular-eslint/recommended",
@@ -41,6 +43,24 @@
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {}
+    },
+    {
+      "files": ["*.js"],
+      "parserOptions": {
+        "ecmaVersion": 2021,
+        "sourceType": "module"
+      },
+      "env": {
+        "es6": true,
+        "browser": true,
+        "node": true
+      },
+      "extends": [
+        "eslint:recommended"
+      ],
+      "rules": {
+        // Add any additional rules you want for JavaScript files
+      }
     }
   ]
 }
