--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/status-bar": "^7.0.1",
     "@ionic/angular": "^8.0.0",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -63,7 +64,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.3"
+    "typescript": "^5.8.3"
   },
   "description": "An Ionic project"
 }
